[F-0002] Infinite Scroll for more result -loading view as last item -load more when reach bottom of recyclerview -update data set after load more -result size handling after load more

--- a/app/src/main/res/drawable/bkg_button.xml
+++ b/app/src/main/res/drawable/bkg_button.xml
@@ -6,7 +6,9 @@
                 android:angle="45"
                 android:startColor="@color/colorSecondary"
                 android:endColor="@color/colorPrimary" />
-            <corners android:radius="10dp"/>
+            <corners
+                android:topRightRadius="10dp"
+                android:bottomRightRadius="10dp" />
         </shape>
     </item>
     <item>
@@ -15,7 +17,9 @@
                 android:angle="45"
                 android:startColor="@color/colorPrimary"
                 android:endColor="@color/colorSecondary" />
-            <corners android:radius="10dp"/>
+            <corners
+                android:topRightRadius="10dp"
+                android:bottomRightRadius="10dp" />
         </shape>
     </item>
 </selector>
