--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,24 +19,38 @@
             <EditText
                 android:id="@+id/et_search"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="@dimen/edit_text_height"
                 android:textColor="@color/colorDark"
                 android:background="@drawable/bkg_edit_text"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/btn_search"
-                android:layout_margin="@dimen/margin_small"
+                android:layout_marginVertical="@dimen/margin_small"
+                android:layout_marginStart="@dimen/margin_small"
                 android:padding="@dimen/margin_small"
                 android:textColorHint="@color/colorDark"
                 android:hint="@string/search_hint" />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <ImageButton
                 android:id="@+id/btn_search"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:text="@string/search"
-                android:textColor="@color/white"
+                android:layout_width="@dimen/button_search_width"
+                android:layout_height="@dimen/edit_text_height"
+                android:src="@mipmap/img_search"
                 android:background="@drawable/bkg_button"
+                android:layout_marginVertical="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_normal"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/btn_filter"
+                android:padding="@dimen/margin_small"
+                android:onClick="search"
+                app:tint="@color/white" />
+            <ImageButton
+                android:id="@+id/btn_filter"
+                android:layout_width="@dimen/buttn_width_normal"
+                android:layout_height="@dimen/edit_text_height"
+                android:src="@mipmap/img_filter"
+                android:scaleType="fitCenter"
+                android:background="@android:color/transparent"
                 android:layout_margin="@dimen/margin_small"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
