--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="margin_xxxlarge">108dp</dimen>
     <dimen name="text_h1">20sp</dimen>
     <dimen name="text_normal">14sp</dimen>
+    <dimen name="edit_text_height">48dp</dimen>
+    <dimen name="button_search_width">68dp</dimen>
+    <dimen name="buttn_width_normal">24dp</dimen>
 </resources>
