--- a/app/src/main/res/drawable/bkg_edit_text.xml
+++ b/app/src/main/res/drawable/bkg_edit_text.xml
@@ -3,6 +3,8 @@
     android:shape="rectangle">
     <solid android:color="@color/colorLight"/>
     <stroke android:color="@color/colorPrimary" android:width="1dp"/>
-    <corners android:radius="10dp"/>
+    <corners
+        android:topLeftRadius="10dp"
+        android:bottomLeftRadius="10dp" />
 </shape>
 
