--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="margin_xsmall">4dp</dimen>
     <dimen name="margin_small">8dp</dimen>
     <dimen name="margin_normal">16dp</dimen>
     <dimen name="margin_large">32dp</dimen>
@@ -10,5 +11,8 @@
     <dimen name="text_normal">14sp</dimen>
     <dimen name="edit_text_height">48dp</dimen>
     <dimen name="button_search_width">68dp</dimen>
-    <dimen name="buttn_width_normal">24dp</dimen>
+    <dimen name="button_width_normal">32dp</dimen>
+    <dimen name="button_hieght_normal">40dp</dimen>
+    <dimen name="image_small">32dp</dimen>
+    <dimen name="image_normal">48dp</dimen>
 </resources>
