--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="margin_xlarge">48dp</dimen>
     <dimen name="margin_xxlarge">72dp</dimen>
     <dimen name="margin_xxxlarge">108dp</dimen>
+    <dimen name="text_title">36sp</dimen>
     <dimen name="text_h1">20sp</dimen>
     <dimen name="text_normal">14sp</dimen>
     <dimen name="edit_text_height">48dp</dimen>
